# cmm-ustc-preregister

./: proposal.md
frontend-dapp/: .gitignore  LOGO_PROMPT.md  README.md  index.html  package-lock.json  package.json  swagger-terraclassic-rpc-endpoint-docs.yaml  vite.config.ts
frontend-dapp/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend-dapp/src/config/: walletconnect.ts
frontend-dapp/src/contexts/: ToastContext.tsx
frontend-dapp/src/hooks/: useBSCContract.ts  useBSCWallet.ts  useBSCWalletConnect.ts  (+4 more)
smartcontracts-bsc/: .gitignore  README.md  foundry.toml
smartcontracts-bsc/script/: Deploy.s.sol
smartcontracts-bsc/src/: USTCPreregister.sol
smartcontracts-bsc/test/: USTCPreregister.t.sol
smartcontracts-terraclassic/: .gitignore  Cargo.toml  README.md
smartcontracts-terraclassic/contracts/ustc-preregister/: Cargo.toml
smartcontracts-terraclassic/contracts/ustc-preregister/examples/: schema.rs
smartcontracts-terraclassic/contracts/ustc-preregister/schema/: ustc-preregister.json
smartcontracts-terraclassic/contracts/ustc-preregister/schema/raw/: execute.json  query.json  response_to_get_all_users.json  response_to_get_config.json  response_to_get_total_deposits.json  response_to_get_user_count.json  response_to_get_user_deposit.json  response_to_validate_index.json
smartcontracts-terraclassic/contracts/ustc-preregister/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  tests.rs
smartcontracts-terraclassic/scripts/: deploy.sh  optimize.sh
smartcontracts-terraclassic/tests/: Cargo.toml  integration.rs
(+37 files in other folders)
